# document-parser

./: README.md
docling/: pyproject.toml  structured.md
docling/docling_doc_parser/: main.py
